<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/orig"
            android:scaleType="centerCrop"/>
        

        <ImageView
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/mask"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/back"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/orig"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="226dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/name"
            android:ems="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="50sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="0sp"
            android:textColor="@color/color1"
            android:shadowColor="@color/color2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="290dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/tag"
            android:textSize="14sp"
            android:textColor="@color/color3"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star1"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"/>

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"/>

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star3"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"/>

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star2"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star4"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"/>

        <TextView
            android:id="@+id/rewiews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewiews"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/color5"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star5"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/storyline"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:text="@string/storyline"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/star1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:textSize="14sp"
            android:alpha="0.75"
            android:textIsSelectable="true"
            android:textColor="@color/white"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/storyline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/story"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/movie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/movie"/>

        <ImageView
            android:id="@+id/movie1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toEndOf="@id/movie"
            app:layout_constraintEnd_toStartOf="@id/movie2"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/movie1" />

        <ImageView
            android:id="@+id/movie2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toEndOf="@id/movie1"
            app:layout_constraintEnd_toStartOf="@id/movie3"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/movie2" />

        <ImageView
            android:id="@+id/movie3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toEndOf="@id/movie2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/movie3" />

        <TextView
            android:id="@+id/cast_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robert_downey_jr"
            android:ems="4"
            android:textSize="12sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/color4"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/movie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/cast_movie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans"
            android:ems="3"
            android:textSize="12sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/color4"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/movie1"
            app:layout_constraintStart_toStartOf="@id/movie1"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/cast_movie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo"
            android:ems="3"
            android:textSize="12sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/color4"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/movie2"
            app:layout_constraintStart_toStartOf="@id/movie2"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/cast_movie3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth"
            android:ems="4"
            android:textSize="12sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/color4"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toBottomOf="@id/movie3"
            app:layout_constraintStart_toStartOf="@id/movie3"
            android:layout_marginTop="6dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>