<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MovieDetailsActivity"
    android:background="@drawable/bg">

        <TextView
            android:id="@+id/movie_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies_list"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="55dp"
            android:layout_marginStart="40dp" />

        <ImageView
            android:id="@+id/combined_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/combined_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/bg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_list"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/bg2"/>

        <ImageView
            android:id="@+id/bg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_list"
            app:layout_constraintStart_toEndOf="@id/bg2"
            android:layout_marginTop="18dp"
            android:layout_marginStart="11dp"
            android:src="@drawable/bg2"/>

        <ImageView
            android:id="@+id/bg4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bg2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="11dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/bg2"/>

        <ImageView
            android:id="@+id/bg5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bg3"
            app:layout_constraintStart_toEndOf="@id/bg4"
            android:layout_marginTop="11dp"
            android:layout_marginStart="11dp"
            android:src="@drawable/bg2"/>

        <ImageView
            android:id="@+id/avengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_list"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="14dp"
            android:src="@drawable/avengers"/>

        <ImageView
            android:id="@+id/mask_avengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_list"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="14dp"
            android:src="@drawable/mask_avengers"/>

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle"
            app:layout_constraintTop_toTopOf="@id/avengers"
            app:layout_constraintStart_toStartOf="@id/avengers"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            android:textSize="12sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/rectangle"
            app:layout_constraintStart_toStartOf="@id/rectangle"
            android:layout_marginTop="4dp"
            android:layout_marginStart="1dp" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like"
            app:layout_constraintTop_toTopOf="@id/avengers"
            app:layout_constraintEnd_toEndOf="@id/avengers"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/tag"
            android:textSize="10sp"
            android:textColor="@color/color3"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toTopOf="@id/avengers"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="214dp"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/star1"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/star2"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star1"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"/>

        <ImageView
            android:id="@+id/star3"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star2"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"/>

        <ImageView
            android:id="@+id/star4"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/star"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star3"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"/>

        <ImageView
            android:id="@+id/star5"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/star2"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star4"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"/>

        <TextView
            android:id="@+id/rewiews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewiews"
            android:textIsSelectable="true"
            android:textSize="10sp"
            android:textStyle="bold"
            android:textColor="@color/color5"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toEndOf="@id/star5"
            android:layout_marginTop="2dp"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="0sp"
            android:textColor="@color/color1"
            android:shadowColor="@color/color2"
            app:layout_constraintTop_toBottomOf="@id/avengers"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_137_min"
            android:textSize="10sp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="0sp"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/avengers"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
